# HT-Assembly

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  rust-linux.yml  rust.yml
assembly-tests/: spec-alpha.txt  spec.txt
assembly-tests/m1/: main.ha  main.hta  structs.has
assembly-tests/m1/add/: add.ha  add.hta  sub.hta
assembly-tests/old/: spec-alpha.txt
assembly-tests/old/m1/: main.ha
assembly-tests/old/mark1/: main.ha  structs.has  templates.hat
crates/hta_compile/: Cargo.toml
crates/hta_compile/src/: arg_crafter.rs  compiler.rs  crafter.rs  lib.rs  test.rs  writer.rs
crates/hta_compile/src/compiler/: before.rs  mod.rs
crates/hta_runtime/: Cargo.toml
crates/hta_runtime/src/: lib.rs
crates/hta_shared/: Cargo.toml
crates/hta_shared/src/: file_io.rs  hfs.rs  hta_database.rs  lib.rs  traits.rs  version.rs
crates/hta_shared/src/components/: instructions.rs  memory.rs  mod.rs  types.rs
crates/hta_shared/src/old/: lib.rs  mod.rs
crates/hta_std/: Cargo.toml
ht-tests/mark1/: main.ha
retired/crates/hta_compile/src/: lib.rs
retired/crates/hta_shared/: Cargo.toml
retired/crates/hta_shared/src/: file_io.rs  lib.rs
retired/crates/hta_shared/src/components/: instructions.rs
retired/src/tests/: mod.rs
retired/test/mark1/: main.ha
retired/test/mark2/: structs.has
scripts/: build.bat  build.sh  vcpkg-build-linux.sh  vcpkg-build-windows.bat  vcpkg-linux.sh  vcpkg-macos.sh  vcpkg-windows.bat
src/: logging.rs  main.c  main.rs
src/exe/: main.c
src/hta_compiler/: hta_compiler.c  hta_compiler.h
src/hta_runtime/: hta_runtime.c  hta_runtime.h
src/hta_shared/: hash_map.c  hash_map.h  hta.c  hta.h  logging.c  logging.h  stypes.h  utils.c  utils.h
src/tests/: mark1.rs
test/mark1/: main.ha
test/mark2/: main.ha  templates.hat
