[package]
name = "hta"
version = "0.0.1"
authors = ["Harmless_Tech (harmless-tech)"]
edition = "2018"
description = "A open source and advanced assembly language."
documentation = "URL"
readme = "README.md"
homepage = "URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
# license = "MIT License - Copyright (c) 2020 Harmless_Tech"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hta_shared = { path = "crates/hta_shared" }
hta_compile = { path = "crates/hta_compile" }
hta_runtime = { path = "crates/hta_runtime" }
toml = "0.5.6"
serde_json = "1.0.58"
log = "0.4.11"
log4rs = "0.13.0"

[workspace]
members = ["crates/*"]
