[package]
name = "hta"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2021"
description = "An open source assembly language that uses a runtime."
readme = "README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hta_shared = { path = "crates/hta_shared" }
hta_compile = { path = "crates/hta_compile" }
hta_runtime = { path = "crates/hta_runtime" }
hta_std = { path = "crates/hta_std" }
log = "0.4.14"
log4rs = "1.0.0"

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
