[package]
name = "hta_compile"
version = "0.0.1"
authors = ["Harmless_Tech (harmless-tech)"]
edition = "2018"
description = "The compile library for ht assembly."
documentation = "TODO URL"
readme = "../../README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
# license = "MIT License - Copyright (c) 2020 Harmless_Tech"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hta_shared = { path = "../hta_shared" }
hta_std = { path = "../hta_std" }
log = "0.4.13"
regex = "1.4.4"
regex_static = "0.1.0"
seahash = "4.1.0"
