[package]
name = "hta_compile"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2021"
description = "The compile library for ht assembly."
readme = "../../README.md"
homepage = "https://harmless.tech/languages/ht-asm"
repository = "https://github.com/harmless-tech/HT-Assembly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
hta_shared = { path = "../hta_shared" }
hta_std = { path = "../hta_std" }
log = "0.4.17"
regex = "1.5.6"
lazy-regex = "2.3.0"
ahash = "0.7.6"
