[package]
name = "hta_runtime"
version = "0.0.1"
authors = ["Harmless_Tech (harmless-tech)"]
edition = "2018"
license = "MIT License - Copyright (c) 2020, 2021 Harmless_Tech"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hta_shared = { path = "../hta_shared" }
hta_std = { path = "../hta_std" }
log = "0.4.13"
