[package]
name = "hta_runtime"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2018"
description = "The runtime library for ht assembly."
documentation = "TODO URL"
readme = "../../README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hta_shared = { path = "../hta_shared" }
hta_std = { path = "../hta_std" }
log = "0.4.14"
