[package]
name = "hta_runtime"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2021"
description = "The runtime library for ht assembly."
readme = "../../README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hta_shared = { path = "../hta_shared" }
hta_std = { path = "../hta_std" }
log = "0.4.14"
