[package]
name = "hta_shared"
version = "0.0.1"
authors = ["Harmless_Tech (harmless-tech)"]
edition = "2018"
description = "The shared library for ht assembly."
documentation = "TODO URL"
readme = "../../README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
# license = "MIT License - Copyright (c) 2020 Harmless_Tech"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
serde = "1.0.124"
