[package]
name = "hta_std"
version = "0.0.1"
authors = ["harmless-tech"]
edition = "2021"
description = "The standard library for ht assembly."
readme = "../../README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/HT-Assembly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
